fixed formatting and clipping issues at the bottom

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,7 +44,7 @@ a {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	width: 100%;
-	height: 80%;
+	height: 600px;
 	background: var(--dark-color-c);
 	margin: 30px auto;
 	overflow: hidden;
@@ -154,6 +154,7 @@ a {
 .chat-form-container {
 	size: 0.5em;
 	padding: 10px 10px;
+	height: 100%;
 	background-color: var(--dark-color-a);
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
@@ -166,14 +167,14 @@ a {
 .chat-form-container input[type='text'] {
 	font-size: 16px;
 	padding: 5px;
-	height: 2em;
+	height: 3em;
 	flex: 1;
 	border-top-left-radius: 0.3rem;
 	border-bottom-left-radius: 0.3rem;
 }
 
 .chat-form-container .button {
-	height: 1.9em;
+	height: 2.9em;
 }
 
 /* Join Page */
